src/graph/snapshots/_gammaloop__graph__half_edge__test__cube_dot.snap
---
source: src/graph/half_edge.rs
expression: graph.base_dot()
---
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
  4 -- 5 [color="red:blue;0.5 " ];
  5 -- 6 [color="red:blue;0.5 " ];
  6 -- 7 [color="red:blue;0.5 " ];
  7 -- 4 [color="red:blue;0.5 " ];
  0 -- 4 [color="red:blue;0.5 " ];
  1 -- 5 [color="red:blue;0.5 " ];
  2 -- 6 [color="red:blue;0.5 " ];
  3 -- 7 [color="red:blue;0.5 " ];
}
