src/graph/snapshots/_gammaloop__graph__half_edge__test__hairy_three_loop.snap
---
source: src/graph/half_edge.rs
expression: graph
---
HedgeGraph(
  nodes: {
    HalfEdgeNode(
      internal_graph: SubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: None,
      ),
      externalhedges: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          16473,
        ],
      ),
    ): (),
    HalfEdgeNode(
      internal_graph: SubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: None,
      ),
      externalhedges: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          934,
        ],
      ),
    ): (),
    HalfEdgeNode(
      internal_graph: SubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: None,
      ),
      externalhedges: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          3072,
        ],
      ),
    ): (),
    HalfEdgeNode(
      internal_graph: SubGraph(
        filter: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            0,
          ],
        ),
        loopcount: None,
      ),
      externalhedges: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          12288,
        ],
      ),
    ): (),
  },
  base_nodes: 4,
  involution: Involution(
    inv: [
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Source((Some(()), 1))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Sink(0)),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Source((Some(()), 3))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Sink(2)),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Source((Some(()), 5))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Sink(4)),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Identity(Some(()))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Identity(Some(()))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Identity(Some(()))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            934,
          ],
        ),
      ), Source((Some(()), 10))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            3072,
          ],
        ),
      ), Sink(9)),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            3072,
          ],
        ),
      ), Source((Some(()), 12))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            12288,
          ],
        ),
      ), Sink(11)),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            12288,
          ],
        ),
      ), Source((Some(()), 14))),
      (HalfEdgeNode(
        internal_graph: SubGraph(
          filter: BitSeq(
            order: "bitvec::order::Lsb0",
            head: BitIdx(
              width: 64,
              index: 0,
            ),
            bits: 15,
            data: [
              0,
            ],
          ),
          loopcount: None,
        ),
        externalhedges: BitSeq(
          order: "bitvec::order::Lsb0",
          head: BitIdx(
            width: 64,
            index: 0,
          ),
          bits: 15,
          data: [
            16473,
          ],
        ),
      ), Sink(13)),
    ],
  ),
)
