src/graph/snapshots/_gammaloop__graph__half_edge__test__hairy_three_loop_cycles.snap
---
source: src/graph/half_edge.rs
expression: cycles
---
[
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          15,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        17392,
      ],
    ),
  ),
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          51,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        17356,
      ],
    ),
  ),
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 15,
        data: [
          32259,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 15,
      data: [
        508,
      ],
    ),
  ),
]
