src/graph/snapshots/_gammaloop__graph__half_edge__test__hairy_three_loop_dot.snap
---
source: src/graph/half_edge.rs
expression: graph.base_dot()
---
graph {
   node [shape=circle,height=0.1,label=""];  overlap="scale";
   0 -- 1 [color="red:blue;0.5 " ];
  1 -- 0 [color="red:blue;0.5 " ];
  0 -- 1 [color="red:blue;0.5 " ];
ext6 [shape=none, label=""];
 0 -- ext6 ;
 ext7 [shape=none, label=""];
 1 -- ext7 ;
 ext8 [shape=none, label=""];
 1 -- ext8 ;
   1 -- 2 [color="red:blue;0.5 " ];
  2 -- 3 [color="red:blue;0.5 " ];
  3 -- 0 [color="red:blue;0.5 " ];
}
