src/graph/snapshots/_gammaloop__graph__half_edge__test__three_loop_cycles.snap
---
source: src/graph/half_edge.rs
expression: cycles
---
[
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          15,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        2160,
      ],
    ),
  ),
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          51,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        2124,
      ],
    ),
  ),
  HalfEdgeNode(
    internal_graph: SubGraph(
      filter: BitSeq(
        order: "bitvec::order::Lsb0",
        head: BitIdx(
          width: 64,
          index: 0,
        ),
        bits: 12,
        data: [
          4035,
        ],
      ),
      loopcount: Some(1),
    ),
    externalhedges: BitSeq(
      order: "bitvec::order::Lsb0",
      head: BitIdx(
        width: 64,
        index: 0,
      ),
      bits: 12,
      data: [
        60,
      ],
    ),
  ),
]
